split templates up

--- a/support/templates/template.html
+++ b/support/templates/template.html
@@ -122,8 +122,7 @@
         });
     });
     </script>
-
-    {% include ["template2.html"] %}
+   
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -160,125 +159,10 @@
     
       </div>
       <div class="tab-pane fade" id="ssh" role="tabpanel" aria-labelledby="ssh-tab">
-        <div style="padding: 1rem"></div>
-        <h3 class="text-center">SSH Scan Results</h3>
-        <div style="padding: 1rem"></div>
-
-        <div class="container">
-          <div class="row row-gap-3 d-flex justify-content-center">
-            <div class="col-md-4">
-              <div class="card">
-                <div class="card-header">
-                  <h5>Filter Settings</h5>
-                </div>
-                <div class="card-body">
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="showErrorScans" checked>
-                    <label class="form-check-label" for="showErrorScans">Show Erroneous Scans</label>
-                  </div>
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="showOkScans" checked>
-                    <label class="form-check-label" for="showOkScans">Show Successful Scans</label>
-                  </div>
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="pqcSupportedOnly" checked>
-                    <label class="form-check-label" for="pqcSupportedOnly">PQC Supported Only</label>
-                  </div>
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="nonpqcSupportedOnly" checked>
-                    <label class="form-check-label" for="nonpqcSupportedOnly">Non-PQC Supported Only</label>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-        {% for hostname in ssh_sorted_hosts %}
-
-        <div style="padding: 1rem"></div>
-
-        <div class="container">
-          <div class="row row-gap-3">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-header">
-                  <h5>{{hostname}}</h5>
-                </div>
-                <div class="card-body">
-
-                 
-                    {% set tmp = ssh_results[hostname] %}
-                    {% for tmp2 in tmp %}
-                      {% set result = tmp2['Ssh'] %}
-
-                      {% if result['error'] %}
-                      <table class="table table-sm pqcscan-error pqc-notsupported">
-                      {% else %}
-                        {% if result['pqc_supported'] %}
-                        <table class="table table-sm pqcscan-ok pqc-supported">
-                        {% else %}
-                        <table class="table table-sm pqcscan-ok pqc-notsupported">
-                        {% endif %}                      
-                      {% endif %}
-
-                        <tbody>
-                          
-                          <tr>
-                            <th width="100%" colspan="2" class="text-center">&nbsp;</th>
-                          </tr>
-                          <tr>
-                            <th width="20%">Port</th>
-                            <td>{{ result['targetspec']['port'] }}</td>
-                          </tr>
-                          {% if result['error'] %}
-                          <tr>
-                            <th width="20%">Error</th>
-                            <td class="text-danger">{{ result['error'] }}</td>
-                          </tr>
-                          {% else %}
-                          <tr>
-                            <th width="20%">PQC Supported</th>
-
-                            {% if result['pqc_supported'] %}
-                              <td class="text-success">{{ result['pqc_supported']}}</td>
-                              <tr>
-                                <th width="20%">PQC Algorithms</th>
-                                <td>
-                                  {% for algo in result['pqc_algos'] | sort %}
-                                    {{ algo }}{% if not loop.last %}, {% endif %}
-                                  {% endfor %}
-                                </td>
-                              </tr>
-                            {% else %}
-                              <td class="text-warning">{{ result['pqc_supported']}}</td>
-                            {% endif %}
-                          </tr>
-                          {% endif %}
-                        </tbody>
-                      </table>
-                    {% endfor %}
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        {% endfor %}
+        {% include ["ssh_results.html"] %}
       </div>
       <div class="tab-pane fade" id="tls" role="tabpanel" aria-labelledby="tls-tab">
-        <div style="padding: 1rem"></div>
-        <h3 class="text-center">TLS Scan Results</h3>
-        <div style="padding: 1rem"></div>
-
-        {% for hostname in tls_sorted_hosts %}
-          {% set tmp = tls_results[hostname] %}
-          {% for tmp2 in tmp %}
-          {% set result = tmp2['Tls'] %}
-      
-          <div>{{hostname}} {{ result['addr'] }} {{ result['targetspec']['port'] }}</div>
-      
-          {% endfor %}
-        {% endfor %}
+        {% include ["tls_results.html"] %}
       </div>
     </div>
     <div style="padding: 1rem"></div>
