--- a/support/templates/ssh_results.html
+++ b/support/templates/ssh_results.html
@@ -1,8 +1,10 @@
+{% import "macros.html" as macros %}
+
 <div style="padding: 1rem"></div>
 <h3 class="text-center">SSH Scan Results</h3>
 <div style="padding: 1rem"></div>
 
-{% include ["filter_settings.html"] %}
+{{ macros::filter_settings(type="ssh") }}
 
 {% for hostname in ssh_sorted_hosts %}
 
