--- a/support/templates/template.html
+++ b/support/templates/template.html
@@ -96,10 +96,13 @@
         {% include ["tls_results.html"] %}
       </div>
     </div>
+
     <div style="padding: 1rem"></div>
     <footer class="text-center mt-auto py-3 navbar navbar-expand-lg bg-body-tertiary">
        <div class="col-md-12 text-center text-muted">
-         &copy; 2025 Anvil Secure Inc. All rights reserved.
+         <a href="https://github.com/anvilsecure/pqcscan/">PQCScan</a> - Copyright &copy; 2025 - <a href="https://anvilsecure.com">Anvil Secure</a>
       </div>
+    </footer>
+
   </body>
 </html>
