--- a/support/templates/summary.html
+++ b/support/templates/summary.html
@@ -3,3 +3,14 @@
 <div style="padding: 1rem"></div>
 <h3 class="text-center">Summary</h3>
 <div style="padding: 1rem"></div>
+
+<div class="container">
+    <div class="row row-gap-3 d-flex justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-body">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
