add summary + time windows

--- a/support/templates/summary.html
+++ b/support/templates/summary.html
@@ -43,3 +43,39 @@
         </div>
     </div>
 </div>
+
+<div style="padding: 1rem"></div>
+
+<div class="container">
+    <div class="row row-gap-3 d-flex justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h5>Time Windows</h5>
+                </div>
+                <div class="card-body">
+                    <table class="table table-sm">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>Type</th>
+                                <th>Start</th>
+                                <th>End</th>
+                            </tr>
+                        <tbody>
+
+                            {% for window in scan_windows %}
+
+                                <tr>
+                                <td>{{ window['scan_type'] | upper }}</td>
+                                <td>{{ window['start_time'] | date(format="%Y-%m-%d %H:%M:%S %Z") }}</td>
+                                <td>{{ window['end_time'] | date(format="%Y-%m-%d %H:%M:%S %Z")}}</td>
+                                </tr>
+                            
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
