--- a/support/templates/template.html
+++ b/support/templates/template.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Anvil Secure">
     <title>PQCScan Results - {{ title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
@@ -64,7 +64,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">PQCScan Results</a>
+        <a class="navbar-brand" href="#">PQCScan Results - Generated at {{ title }}</a>
         <div class="form-check form-switch">
           <input class="form-check-input" type="checkbox" id="darkModeSwitch" checked>
           <label class="form-check-label" for="darkModeSwitch">Dark Mode</label>
