--- a/support/templates/ssh_results.html
+++ b/support/templates/ssh_results.html
@@ -8,9 +8,28 @@
 
 {% for hostname in ssh_sorted_hosts %}
 
-<div style="padding: 1rem"></div>
 
-<div class="container">
+
+{% set tmp = ssh_results[hostname] %}
+{% set_global has_error = false %}
+{% set_global has_ok = false %}
+{% for tmp2 in tmp %}
+  {% set result = tmp2['Ssh'] %}
+  {% if result['error'] %}
+    {% set_global has_error = true %}
+  {% else %}
+    {% set_global has_ok = true %}
+  {% endif %}
+{% endfor %}
+
+{% if has_error and has_ok %}
+  <div class="container host_has_ok host_has_error ">
+{% elif has_error %}
+  <div class="container host_has_error ">
+{% else %}
+  <div class="container host_has_ok">
+{% endif %}
+  <div style="padding: 1rem"></div>
   <div class="row row-gap-3">
     <div class="col-md-12">
       <div class="card">
@@ -19,18 +38,17 @@
         </div>
         <div class="card-body">
 
-         
             {% set tmp = ssh_results[hostname] %}
             {% for tmp2 in tmp %}
               {% set result = tmp2['Ssh'] %}
 
               {% if result['error'] %}
-              <table class="table table-sm pqcscan-error pqc-notsupported">
+                <table class="table table-sm pqcscan-error pqc-notsupported">
               {% else %}
                 {% if result['pqc_supported'] %}
-                <table class="table table-sm pqcscan-ok pqc-supported">
+                  <table class="table table-sm pqcscan-ok pqc-supported">
                 {% else %}
-                <table class="table table-sm pqcscan-ok pqc-notsupported">
+                  <table class="table table-sm pqcscan-ok pqc-notsupported">
                 {% endif %}                      
               {% endif %}
 
