--- a/support/templates/ssh_results.html
+++ b/support/templates/ssh_results.html
@@ -8,27 +8,28 @@
 
 {% for hostname in ssh_sorted_hosts %}
 
-
-
 {% set tmp = ssh_results[hostname] %}
+
 {% set_global has_error = false %}
-{% set_global has_ok = false %}
+{% set_global has_pqc = false %}
+{% set_global has_nonpqc = false %}
+
 {% for tmp2 in tmp %}
   {% set result = tmp2['Ssh'] %}
+
   {% if result['error'] %}
     {% set_global has_error = true %}
+  {% elif result['pqc_supported'] %}
+    {% set_global has_pqc = true %}
   {% else %}
-    {% set_global has_ok = true %}
+    {% set_global has_nonpqc = true %}
   {% endif %}
+
 {% endfor %}
 
-{% if has_error and has_ok %}
-  <div class="container host_has_ok host_has_error ">
-{% elif has_error %}
-  <div class="container host_has_error ">
-{% else %}
-  <div class="container host_has_ok">
-{% endif %}
+
+<div class="container {% if has_error %}host_has_error{% endif %} {% if has_pqc %}host_has_pqc{% endif %} {% if has_nonpqc %}host_has_nonpqc{% endif %} ">
+
   <div style="padding: 1rem"></div>
   <div class="row row-gap-3">
     <div class="col-md-12">
@@ -43,7 +44,7 @@
               {% set result = tmp2['Ssh'] %}
 
               {% if result['error'] %}
-                <table class="table table-sm pqcscan-error pqc-notsupported">
+                <table class="table table-sm pqcscan-error">
               {% else %}
                 {% if result['pqc_supported'] %}
                   <table class="table table-sm pqcscan-ok pqc-supported">
