fix up templates for filtering

--- a/support/templates/ssh_results.html
+++ b/support/templates/ssh_results.html
@@ -8,27 +8,21 @@
 
 {% for hostname in ssh_sorted_hosts %}
 
-{% set tmp = ssh_results[hostname] %}
+  {% set_global has_error = false %}
+  {% set_global has_pqc = false %}
+  {% set_global has_nonpqc = false %}
+  {% for i in ssh_results[hostname] %}
+    {% set result = i['Ssh'] %}
+    {% if result['error'] %}
+      {% set_global has_error = true %}
+    {% elif result['pqc_supported'] %}
+      {% set_global has_pqc = true %}
+    {% else %}
+      {% set_global has_nonpqc = true %}
+    {% endif %}
+  {% endfor %}
 
-{% set_global has_error = false %}
-{% set_global has_pqc = false %}
-{% set_global has_nonpqc = false %}
-
-{% for tmp2 in tmp %}
-  {% set result = tmp2['Ssh'] %}
-
-  {% if result['error'] %}
-    {% set_global has_error = true %}
-  {% elif result['pqc_supported'] %}
-    {% set_global has_pqc = true %}
-  {% else %}
-    {% set_global has_nonpqc = true %}
-  {% endif %}
-
-{% endfor %}
-
-
-<div class="container {% if has_error %}host_has_error{% endif %} {% if has_pqc %}host_has_pqc{% endif %} {% if has_nonpqc %}host_has_nonpqc{% endif %} ">
+  <div class="container {% if has_error %}host_has_error{% endif %} {% if has_pqc %}host_has_pqc{% endif %} {% if has_nonpqc %}host_has_nonpqc{% endif %} ">
 
   <div style="padding: 1rem"></div>
   <div class="row row-gap-3">
