--- a/support/templates/tls_results.html
+++ b/support/templates/tls_results.html
@@ -8,13 +8,28 @@
 
 {% for hostname in tls_sorted_hosts %}
 
-<div style="padding: 1rem"></div>
+    {% set_global has_error = false %}
+    {% set_global has_pqc = false %}
+    {% set_global has_nonpqc = false %}
+    {% for i in tls_results[hostname] %}
+        {% set result = i['Tls'] %}
+        {% if result['error'] %}
+            {% set_global has_error = true %}
+        {% elif result['pqc_supported'] %}
+            {% set_global has_pqc = true %}
+        {% else %}
+            {% set_global has_nonpqc = true %}
+        {% endif %}
+    {% endfor %}
+
+
 
   {% set tmp = tls_results[hostname] %}
   {% for tmp2 in tmp %}
     {% set result = tmp2['Tls'] %}
 
-    <div class="container">
+    <div class="container {% if has_error %}host_has_error{% endif %} {% if has_pqc %}host_has_pqc{% endif %} {% if has_nonpqc %}host_has_nonpqc{% endif %} ">
+    <div style="padding: 1rem"></div>
     <div class="row row-gap-3">
         <div class="col-md-12">
         <div class="card">
