--- a/support/templates/summary.html
+++ b/support/templates/summary.html
@@ -23,12 +23,15 @@
                             </tr>
                         <tbody>
                             <tr>
+                            {% if ssh_total_count > 0 %}
                             <th>SSH</th>
                             <td>{{ ssh_total_count }}</td>
                             <td>{{ ssh_pqc_supported_count }}</td>
                             <td>{{ ssh_success_count }}</td>
                             <td>{{ ssh_fail_count }}</td>
                             </tr>
+                            {% endif %}
+                            {% if tls_total_count > 0 %}
                             <tr>
                             <th>TLS</th>
                             <td>{{ tls_total_count }}</td>
@@ -36,6 +39,7 @@
                             <td>{{ tls_success_count }}</td>
                             <td>{{ tls_fail_count }}</td>
                             </tr>
+                            {% endif %}
                         </tbody>
                     </table>
                 </div>
